[gd_scene load_steps=13 format=3 uid="uid://cfkmuh148lcnl"]

[ext_resource type="Texture2D" uid="uid://ml7ff6lwe55k" path="res://assets/opening/Copy of Website SERASI 2025(1).png" id="1_183qg"]
[ext_resource type="Script" path="res://scenes/menfes.gd" id="1_asm63"]
[ext_resource type="Texture2D" uid="uid://dj5pn4if4w54i" path="res://assets/s9/cloud.png" id="2_1ivxf"]
[ext_resource type="Script" path="res://scenes/cloud.gd" id="3_tkma1"]
[ext_resource type="Theme" uid="uid://dibhwi1n0b2i3" path="res://resources/ui_1_theme.tres" id="4_4ttou"]
[ext_resource type="FontFile" uid="uid://dtr4d735iiww0" path="res://assets/Fonts/SuperMario256.ttf" id="6_gnial"]
[ext_resource type="Texture2D" uid="uid://bgdm5c8e4nep4" path="res://assets/onscreen controls/lineLight31.png" id="6_mfnth"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5imex"]
texture = ExtResource("1_183qg")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gf071"]
bg_color = Color(0.517647, 0.172549, 0.172549, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wknph"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tq4bf"]
content_margin_left = 24.0
content_margin_right = 24.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mtupk"]

[node name="menfes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_asm63")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5imex")

[node name="Cloud" type="Sprite2D" parent="."]
position = Vector2(161, 203)
scale = Vector2(0.415064, 0.415064)
texture = ExtResource("2_1ivxf")
script = ExtResource("3_tkma1")

[node name="Cloud2" type="Sprite2D" parent="."]
position = Vector2(1123, 138)
scale = Vector2(0.300481, 0.300481)
texture = ExtResource("2_1ivxf")
script = ExtResource("3_tkma1")

[node name="Watermark" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 257.0
grow_vertical = 0
theme_override_constants/margin_left = 12
theme_override_constants/margin_bottom = 12

[node name="LinkButton" type="LinkButton" parent="Watermark"]
layout_mode = 2
theme = ExtResource("4_4ttou")
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 36
text = "@ghaisanghaisan"
underline = 1
uri = "https://github.com/ghaisanghaisan"

[node name="Back Btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -29.0
offset_top = 12.0
offset_right = 27.0
offset_bottom = 68.0
grow_horizontal = 0
scale = Vector2(-1.57597, 1.57597)
icon = ExtResource("6_mfnth")

[node name="content" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -627.0
offset_top = -245.0
offset_right = 627.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gf071")

[node name="MarginContainer" type="MarginContainer" parent="content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="content/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ScrollContainer" type="ScrollContainer" parent="content/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wknph")

[node name="Chatroom" type="VBoxContainer" parent="content/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="2025" type="RichTextLabel" parent="content/MarginContainer/VBoxContainer/ScrollContainer/Chatroom"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/normal_font = ExtResource("6_gnial")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "

[wave amp=50 freq=2][center][color=#fff]Loading[/color][/center][/wave]


"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="content/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenfesInput" type="TextEdit" parent="content/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_4ttou")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_tq4bf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mtupk")
placeholder_text = "Tulis pesanmu disini!"
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false
scroll_fit_content_height = true

[node name="MenfesKirim" type="Button" parent="content/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_4ttou")
theme_override_font_sizes/font_size = 36
text = "Kirim!"

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="pressed" from="Back Btn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="content/MarginContainer/VBoxContainer/HBoxContainer/MenfesKirim" to="." method="_on_menfes_kirim_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
